--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
+/vendor/bundle
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -26,3 +27,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/public/assets
+/config/secrets.yml
+/config/database.yml
